@@ -136,13 +136,15 @@ public class ArcLightningParticle extends Particle {
 
         Tesselator tesselator = RenderSystem.renderThreadTesselator();
 
-        var builder = RENDER_TYPE.begin(tesselator, Minecraft.getInstance().getTextureManager());
+        BufferBuilder vertexConsumer = Tesselator.getInstance().getBuilder();
+
+        RENDER_TYPE.begin(vertexConsumer, Minecraft.getInstance().getTextureManager());
 
         List<Vec3> positions = buildPath(time,lightningRandomSpread,seed,lightningBreakCount,path);
 
-        drawLightning(transform,builder,positions,path,lightningWidth,r,g,b,a);
+        drawLightning(transform,vertexConsumer,positions,path,lightningWidth,r,g,b,a);
 
-        BufferUploader.drawWithShader(builder.build());
+        BufferUploader.drawWithShader(vertexConsumer.end());
 
     }
     public static void fullLightningDraw(long time,int seed,int lightningBreakCount,Matrix4f transform,VertexConsumer vertexConsumer, List<Vec3> path, float lightningWidth, float lightningRandomSpread,float r,float g,float b,float a){
@@ -182,47 +184,47 @@ public class ArcLightningParticle extends Particle {
 
             double w = lightningWidth / sin;
 
-            vertex.addVertex(transform,
+            vertex.vertex(transform,
                     (float) (p1.x),
                     (float) (p1.y),
                     0
-            ).setColor(r,g,b,i == 1 ? 0 : a);
-            vertex.addVertex(transform,
+            ).color(r,g,b,i == 1 ? 0 : a);
+            vertex.vertex(transform,
                     (float) (p1.x + previousCenteredVector.x * previousw),
                     (float) (p1.y + previousCenteredVector.y * previousw),
                     0
-            ).setColor(r,g,b,0f);
-            vertex.addVertex(transform,
+            ).color(r,g,b,0f);
+            vertex.vertex(transform,
                     (float) (p2.x + v.x * w),
                     (float) (p2.y + v.y * w),
                     0
-            ).setColor(r,g,b,0f);
-            vertex.addVertex(transform,
+            ).color(r,g,b,0f);
+            vertex.vertex(transform,
                     (float) (p2.x),
                     (float) (p2.y),
                     0
-            ).setColor(r,g,b,a);
+            ).color(r,g,b,a);
 
-            vertex.addVertex(transform,
+            vertex.vertex(transform,
                     (float) (p1.x),
                     (float) (p1.y),
                     0
-            ).setColor(r,g,b,i == 1 ? 0 : a);
-            vertex.addVertex(transform,
+            ).color(r,g,b,i == 1 ? 0 : a);
+            vertex.vertex(transform,
                     (float) (p1.x - previousCenteredVector.x * previousw),
                     (float) (p1.y - previousCenteredVector.y * previousw),
                     0
-            ).setColor(r,g,b,0f);
-            vertex.addVertex(transform,
+            ).color(r,g,b,0f);
+            vertex.vertex(transform,
                     (float) (p2.x - v.x * w),
                     (float) (p2.y - v.y * w),
                     0
-            ).setColor(r,g,b,0f);
-            vertex.addVertex(transform,
+            ).color(r,g,b,0f);
+            vertex.vertex(transform,
                     (float) (p2.x),
                     (float) (p2.y),
                     0
-            ).setColor(r,g,b,a);
+            ).color(r,g,b,a);
 
             prevPoint = p2;
             previousw = w;
@@ -230,50 +232,50 @@ public class ArcLightningParticle extends Particle {
         }
 
 
-        Vec3 lastPos = positions.getLast();
+        Vec3 lastPos = positions.get(positions.size() - 1);
 
 
-        vertex.addVertex(transform,
+        vertex.vertex(transform,
                 (float) (prevPoint.x),
                 (float) (prevPoint.y),
                 0
-        ).setColor(r,g,b,a);
-        vertex.addVertex(transform,
+        ).color(r,g,b,a);
+        vertex.vertex(transform,
                 (float) (prevPoint.x + previousCenteredVector.x * previousw),
                 (float) (prevPoint.y + previousCenteredVector.y * previousw),
                 0
-        ).setColor(r,g,b,0f);
-        vertex.addVertex(transform,
+        ).color(r,g,b,0f);
+        vertex.vertex(transform,
                 (float) (lastPos.x),
                 (float) (lastPos.y),
                 0
-        ).setColor(r,g,b,0f);
-        vertex.addVertex(transform,
+        ).color(r,g,b,0f);
+        vertex.vertex(transform,
                 (float) (lastPos.x),
                 (float) (lastPos.y),
                 0
-        ).setColor(r,g,b,a);
+        ).color(r,g,b,a);
 
-        vertex.addVertex(transform,
+        vertex.vertex(transform,
                 (float) (prevPoint.x),
                 (float) (prevPoint.y),
                 0
-        ).setColor(r,g,b,a);
-        vertex.addVertex(transform,
+        ).color(r,g,b,a);
+        vertex.vertex(transform,
                 (float) (prevPoint.x - previousCenteredVector.x * previousw),
                 (float) (prevPoint.y - previousCenteredVector.y * previousw),
                 0
-        ).setColor(r,g,b,0f);
-        vertex.addVertex(transform,
+        ).color(r,g,b,0f);
+        vertex.vertex(transform,
                 (float) (lastPos.x),
                 (float) (lastPos.y),
                 0
-        ).setColor(r,g,b,0f);
-        vertex.addVertex(transform,
+        ).color(r,g,b,0f);
+        vertex.vertex(transform,
                 (float) (lastPos.x),
                 (float) (lastPos.y),
                 0
-        ).setColor(r,g,b,a);
+        ).color(r,g,b,a);
 
 
     }
@@ -301,7 +303,7 @@ public class ArcLightningParticle extends Particle {
                     .add(nb.zRot((float)Math.PI / 2).multiply(rmod,rmod,rmod));
             path.add(point);
         }
-        path.add(positions.getLast());
+        path.add(positions.get(positions.size() - 1));
         return path;
     }
 
@@ -328,18 +330,18 @@ public class ArcLightningParticle extends Particle {
     public static final ParticleRenderType RENDER_TYPE = new ParticleRenderType() {
         @Nullable
         @Override
-        public BufferBuilder begin(Tesselator tesselator, TextureManager manager) {
+        public void begin(BufferBuilder tesselator, TextureManager manager) {
             RenderSystem.depthMask(true);
             RenderSystem.enableBlend();
             RenderSystem.disableCull();
             RenderSystem.setShader(GameRenderer::getRendertypeLightningShader);
             RenderSystem.blendFunc(GL11.GL_SRC_ALPHA,GL11.GL_ONE_MINUS_SRC_ALPHA);
-            return tesselator.begin(VertexFormat.Mode.QUADS, DefaultVertexFormat.POSITION_COLOR);
+            tesselator.begin(VertexFormat.Mode.QUADS, DefaultVertexFormat.POSITION_COLOR);
         }
 
         @Override
-        public boolean isTranslucent() {
-            return true;
+        public void end(Tesselator tesselator) {
+            tesselator.end();
         }
 
         @Override
@@ -368,76 +370,3 @@ public class ArcLightningParticle extends Particle {
 
 }
 
-//    private Vec3[] placeVertices(VertexConsumer vertex,Matrix4f transform,Vec3 v1,Vec3 v2,Vec3 v3,Vec3 prevBelow,Vec3 prevAbove){
-//        Vec3 b = v2.subtract(v1);
-//        Vec3 b1 = v3.subtract(v2);
-//        Vec3 rotated = b.normalize().multiply(lightningWidth,lightningWidth,0).zRot((float) Math.PI / 2);
-//        Vec3 rrotated = rotated.reverse();
-//        Vec3 rotated1 = b1.normalize().multiply(lightningWidth,lightningWidth,0).zRot((float) Math.PI / 2);
-//        Vec3 rrotated1 = rotated1.reverse();
-//        Vec3 pb1 = v1.add(rotated);
-//        Vec3 pb2 = v2.add(rotated);
-//
-//        Vec3 pb3 = v2.add(rotated1);
-//        Vec3 pb4 = v3.add(rotated1);
-//
-//        Vec3 pa1 = v1.add(rrotated);
-//        Vec3 pa2 = v2.add(rrotated);
-//
-//        Vec3 pa3 = v2.add(rrotated1);
-//        Vec3 pa4 = v3.add(rrotated1);
-//        double kb1 = (pb2.y - pb1.y) / (pb2.x - pb1.x);
-//        double bb1 = -(pb1.x * pb2.y - pb2.x * pb1.y) / (pb2.x - pb1.x);
-//
-//        double kb2 = (pb4.y - pb3.y) / (pb4.x - pb3.x);
-//        double bb2 = -(pb3.x * pb4.y - pb4.x * pb3.y) / (pb4.x - pb3.x);
-//
-//        double xb = (bb2 - bb1) / (kb1 - kb2);
-//
-//        double ka1 = (pa2.y - pa1.y) / (pa2.x - pa1.x);
-//        double ba1 = -(pa1.x * pa2.y - pa2.x * pa1.y) / (pa2.x - pa1.x);
-//
-//        double ka2 = (pa4.y - pa3.y) / (pa4.x - pa3.x);
-//        double ba2 = -(pa3.x * pa4.y - pa4.x * pa3.y) / (pa4.x - pa3.x);
-//
-//        double xa = (ba2 - ba1) / (ka1 - ka2);
-//        Vec3 pBelow = new Vec3(
-//                xb,
-//                kb1 * xb + bb1,
-//                0
-//        );
-//        Vec3 pAbove = new Vec3(
-//                xa,
-//                ka1 * xa + ba1,
-//                0
-//        );
-//        vertex.addVertex(transform,(float) prevBelow.x,(float) prevBelow.y,0).setColor(1f,1f,1f,1f);
-//        vertex.addVertex(transform,(float) pBelow.x,(float) pBelow.y,0).setColor(1f,1f,1f,1f);
-//        vertex.addVertex(transform,(float) pAbove.x,(float) pAbove.y,0).setColor(1f,1f,1f,1f);
-//        vertex.addVertex(transform,(float) prevAbove.x,(float) prevAbove.y,0).setColor(1f,1f,1f,1f);
-//        return new Vec3[]{pBelow,pAbove};
-//    }
-
-//        float step = 0.01f;
-//
-//        Vec3 v1 = catmullromPositions[0];
-//        Vec3 v2 = FDMathUtil.catmullRom(catmullromPositions,step);
-//        Vec3 v3 = FDMathUtil.catmullRom(catmullromPositions,step * 2);
-//        Vec3 prevBelow = new Vec3(0,-lightningWidth,0);
-//        Vec3 prevAbove = new Vec3(0,lightningWidth,0);
-//        for (float i = step * 3; i <= 1;i += step){
-//
-//            vertex.addVertex(matrix4f,(float)v1.x,(float)v1.y,0).setColor(1f,0f,0f,1f);
-//            vertex.addVertex(matrix4f,(float)v2.x,(float)v2.y,0).setColor(1f,0f,0f,1f);
-//
-//            vertex.addVertex(matrix4f,(float)v2.x,(float)v2.y,0.1f).setColor(1f,1f,0f,1f);
-//            vertex.addVertex(matrix4f,(float)v3.x,(float)v3.y,0.1f).setColor(1f,1f,0f,1f);
-//            var vecs = this.placeVertices(vertex,matrix4f,v1,v2,v3,prevBelow,prevAbove);
-//            prevBelow = vecs[0];
-//            prevAbove = vecs[1];
-//            v1 = v2;
-//            v2 = v3;
-//            v3 = FDMathUtil.catmullRom(catmullromPositions,i);
-//        }
-
-//        this.placeVertices(vertex,matrix4f,v1,v2,v3,prevBelow,prevAbove);
